@@ -1175,9 +1175,10 @@
     <branch id="HEAD"/>
   </module>
   <module id="gucharmap">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="guikachu">
     <branch id="HEAD"/>
