@@ -507,7 +507,7 @@
       <module id="gtk-engines" branch="gtk-engines-2-12"/>
       <module id="gtkhtml" branch="gnome-2-20"/>
       <module id="gtksourceview" branch="gnome-2-20"/>
-      <module id="gucharmap"/>
+      <module id="gucharmap" branch="gnome-2-20"/>
       <module id="libgnomekbd" branch="gnome-2-20"/>
       <module id="libgnomeprint"/>
       <module id="libgnomeprintui"/>
