@@ -1,5 +1,11 @@
 2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>
 
+	* gnome-modules.xml.in:
+	* release.xml.in:
+	gucharmap branched for gnome-2-20
+
+2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>
+
 	* gnome-modules.xml.in: Added totem-pl-parser and Bastien as a maintainer
 	of it and for totem too
 	* release.xml.in: Added totem-pl-parser to GNOME 2.22 release set and
